cmake_minimum_required(VERSION 3.15)
project(FinalProject)
set(EXE_NAME FinalProject)
set(input01 " ")
set(input02 " ")
set(CMAKE_CXX_STANDARD 14)
#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -03")
#set(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} -03")
file(COPY rapidjson/ DESTINATION ./rapidjson)
include_directories(rapidjson)
file(COPY util/ DESTINATION ./util)
include_directories(util)
SET (BOOST_ROOT "C:/Program Files/boost_1_60_0")
SET (BOOST_INCLUDEDIR "C:/Program Files/boost_1_60_0/boost")
SET (BOOST_LIBRARYDIR "C:/Program Files/boost_1_60_0/libs")
SET (BOOST_MIN_VERSION "1.55.0")
set (Boost_NO_BOOST_CMAKE ON)
FIND_PACKAGE(Boost ${BOOST_MIN_VERSION} REQUIRED)
if (NOT Boost_FOUND)
    message(FATAL_ERROR "Fatal error: Boost (version >= 1.55) required.")
else()
    message(STATUS "Setting up BOOST")
    message(STATUS " Includes - ${Boost_INCLUDE_DIRS}")
    message(STATUS " Library  - ${Boost_LIBRARY_DIRS}")
    include_directories(${Boost_INCLUDE_DIRS})
    link_directories(${Boost_LIBRARY_DIRS})
endif (NOT Boost_FOUND)

add_executable(FinalProject main.cpp QueryEngine.cpp QueryEngine.h DocumentParser.cpp DocumentParser.h CSVReader.cpp CSVReader.h LinkedList.h hashTable.h porter2_stemmer.cpp porter2_stemmer.h stopword.txt AVLNode.h AVLTree.h Word.cpp Word.h Author.cpp Author.h DocumentOBJ.cpp DocumentOBJ.h)

